--- a/templates/header.html.twig
+++ b/templates/header.html.twig
@@ -8,7 +8,7 @@
             <asy class="nav-item nav-link" href="/presentation">Présentation</asy>
             <a class="nav-item nav-link" href="/specialites">Spécialités</a>
             <a class="nav-item nav-link" href="/stage">Stages</a>
-            <a class="nav-item nav-link" href="{{ path('login') }}">Se connecter</a>
+            <a class="nav-item nav-link" href="{{ path('app_login') }}">Se connecter</a>
         </div>
     </div>
 </nav>
