--- a/templates/header.html.twig
+++ b/templates/header.html.twig
@@ -5,10 +5,14 @@
     </button>
     <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
         <div class="navbar-nav">
-            <asy class="nav-item nav-link" href="/presentation">Présentation</asy>
-            <a class="nav-item nav-link" href="/specialites">Spécialités</a>
-            <a class="nav-item nav-link" href="/stage">Stages</a>
-            <a class="nav-item nav-link" href="{{ path('app_login') }}">Se connecter</a>
+
+            {% if is_granted("ROLE_USER") %}
+                <a class="nav-item nav-link" href="{{ path('app_logout') }}">Se déconnecter</a>
+            {% else %}
+                <a class="nav-item nav-link" href="/specialites">Le SI</a>
+                <a class="nav-item nav-link" href="/stage">Le Réseau</a>
+                <a class="nav-item nav-link" href="{{ path('app_login') }}">Se connecter</a>
+            {% endif %}
         </div>
     </div>
 </nav>
