--- a/templates/accueil/index.html.twig
+++ b/templates/accueil/index.html.twig
@@ -1,20 +1,34 @@
+
 {% extends 'base.html.twig' %}
 
-{% block title %}Hello AccueilController!{% endblock %}
+{% block title %}BTS-SIO Accueil{% endblock %}
 
 {% block body %}
-<style>
-    .example-wrapper { margin: 1em auto; max-width: 800px; width: 95%; font: 18px/1.5 sans-serif; }
-    .example-wrapper code { background: #F5F5F5; padding: 2px 6px; }
-</style>
+    <section>
+        <div class="row">
+            <div class="col d-flex justify-content-center">
+                <br><br>
+                <h1 class="pt-5 d-flex justify-content-center" style="color: rgb(30,121,213);"><strong>Bienvenue sur la page d'accueil sur site GSB</strong><br></h1>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-6 d-flex justify-content-center pt-5">
+                <br><br>
+                <img src="img/logo2.png" style="border:solid 10px white" class=" d-flex justify-content-center"</img>
+            </div>
+            <div class="col-6 d-flex justify-content-center pt-5">
+                Le laboratoire GSB (Galaxy Swiss Bourdin) est une industrie pharmaceutique spécialisée dans les médicaments & les molécules ayant entrainées des complications médicales.<br>
 
-<div class="example-wrapper">
-    <h1>Hello unLogged user ! ✅</h1>
+                - C’est une société anonyme (SA).<br>
+                - GSB a une finalité à but lucratif.<br>
+                - Les acteurs internes sont des visiteurs qui sont internes à GSB<br>
+                - Les acteurs externes sont la relation d’architecture client-serveur<br>
+                - Nous faisons partie également des acteurs externes du GSB<br>
+                - Les secteurs d’activités de GSB sont les hôpitaux & les officines (ex : pharmacies indépendantes)
 
-    This friendly message is coming from:
-    <ul>
-        <li>Your controller at <code><a href="{{ '/Users/Thibault/Desktop/MissionGSBSymfony/src/Controller/AccueilController.php'|file_link(0) }}">src/Controller/AccueilController.php</a></code></li>
-        <li>Your template at <code><a href="{{ '/Users/Thibault/Desktop/MissionGSBSymfony/templates/accueil/index.html.twig'|file_link(0) }}">templates/accueil/index.html.twig</a></code></li>
-    </ul>
-</div>
+
+                <div class="row" style="height: 10vw"></div>
+    </section>
+    <script src="assets/js/jquery.min.js"></script>
+    <script src="assets/bootstrap/js/bootstrap.min.js"></script>
 {% endblock %}
