--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -13,12 +13,24 @@
         {% block javascripts %}
             {#{{ encore_entry_script_tags('app') }}#}
         {% endblock %}
-        <link rel="stylesheet" href="/css/bootstrap.min.css">
-        <link rel="stylesheet" href="/css/style.css">
-        <link rel="stylesheet" href="/css/all.css">
-    </head>
+
+            <!-- Bootstrap CSS -->
+            <script src="js/query.js"></script>
+            <link rel="stylesheet" href="/css/bootstrap.min.css">
+            <link rel="stylesheet" href="/css/style.css">
+            <link rel="stylesheet" href="/css/all.css">
+            <link rel="stylesheet" href="/css/base.css">
+            <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
+            <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat:400,400i,700,700i,600,600i">
+            <link rel="stylesheet" href="assets/fonts/simple-line-icons.min.css">
+            <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/baguettebox.js/1.10.0/baguetteBox.min.css">
+            <link rel="stylesheet" href="assets/css/smoothproducts.css">
+            <script src="js/bootstrap.min.js"></script>
+
+        </head>
     <body>
     <div class="container">
+        <body style="background-color:#c6f0ff; background-size: cover; background-repeat: no-repeat; background-position: center">
 
         {% block header %}
             {% include 'header.html.twig' %}
