--- a/templates/footer.html.twig
+++ b/templates/footer.html.twig
@@ -1,3 +1,14 @@
+<script src="js/query.js"></script>
+<link rel="stylesheet" href="/css/bootstrap.min.css">
+<link rel="stylesheet" href="/css/style.css">
+<link rel="stylesheet" href="/css/all.css">
+<link rel="stylesheet" href="/css/base.css">
+<link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
+<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat:400,400i,700,700i,600,600i">
+<link rel="stylesheet" href="assets/fonts/simple-line-icons.min.css">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/baguettebox.js/1.10.0/baguetteBox.min.css">
+<link rel="stylesheet" href="assets/css/smoothproducts.css">
+<script src="js/bootstrap.min.js"></script>
 <footer class="text-grey-50 fixed-bottom" style="background-color:#a7c9dc;">
     <div class="container text-center">
         <p style="font-size: small">Voici le site d'apprentissage de Symfony réalisé par Thibault Blondel</p>
