--- a/templates/ligne_frais_forfait/edit.html.twig
+++ b/templates/ligne_frais_forfait/edit.html.twig
@@ -1,13 +1,13 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Edit LigneFraisForfait{% endblock %}
+{% block title %}Modification Frais Forfaitaire{% endblock %}
 
 {% block body %}
-    <h1>Edit LigneFraisForfait</h1>
+    <div class="pt-5">
+        <h1 class="pt-5">Modification Frais Forfaitaire</h1>
 
-    {{ include('ligne_frais_forfait/_form.html.twig', {'button_label': 'Update'}) }}
+        {{ include('ligne_frais_forfait/_form.html.twig', {'button_label': 'Update'}) }}
 
-    <a href="{{ path('ligne_frais_forfait_index') }}">back to list</a>
-
-    {{ include('ligne_frais_forfait/_delete_form.html.twig') }}
+        {{ include('ligne_frais_forfait/_delete_form.html.twig') }}
+    </div>
 {% endblock %}
