--- a/templates/ligne_frais_hors_forfait/_form.html.twig
+++ b/templates/ligne_frais_hors_forfait/_form.html.twig
@@ -1,27 +1,31 @@
 {{ form_start(form) }}
     <div class="container">
-        <table class="table">
-            <thead>
-            <tr>
-                <th>Libelle</th>
-                <th>Jour</th>
-                <th>Montant</th>
-            </tr>
-            </thead>
-            <tbody>
-            {% if form|length >= 2 %}
-                {% for i in 0..form|length-2 %}
-                    <tr>
-                        <td>{{ form_row(form[i].libelle, {'attr':{'class':'form-control'}}) }}</td>
-                        <td>{{ form_row(form[i].date, {'date_pattern': '<span style="display: none;">{{ year }} {{ month }}</span> {{ day }}'}) }}</td>
-                        <td>{{ form_row(form[i].montant, {'attr':{'class':'form-control'}}) }}</td>
-                    </tr>
-                {% endfor %}
-            {% endif %}
-            </tbody>
-        </table>
+        {% if form|length >= 2 %}
+            <table class="table">
+                <thead>
+                <tr>
+                    <th>Libelle</th>
+                    <th>Jour</th>
+                    <th>Montant</th>
+                </tr>
+                </thead>
+                <tbody>
+                    {% for i in 0..form|length-2 %}
+                        <tr>
+                            <td>{{ form_row(form[i].libelle, {'attr':{'class':'form-control'}}) }}</td>
+                            <td>{{ form_row(form[i].date, {'date_pattern': '<span style="display: none;">{{ year }} {{ month }}</span> {{ day }}'}) }}</td>
+                            <td>{{ form_row(form[i].montant, {'attr':{'class':'form-control'}}) }}</td>
+                        </tr>
+                    {% endfor %}
+                </tbody>
+            </table>
+
+            <button class="btn btn-outline-success">{{ button_label|default('Modifier') }}</button>
+        {% else %}
+            <p>Pas de ligne frais hors forfait !</p>
+        {% endif %}
+
+        <a class="btn btn-outline-danger" href="{{ path('fiche_frais_index') }}">Retour aux fiches</a>
     </div>
-{#    {{ form_widget(form) }}#}
-    <button class="btn btn-outline-danger">{{ button_label|default('Modifier') }}</button>
 
 {{ form_end(form) }}
